WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210148
We can still cache delete in strict mode as long as the property is not "non-configurable"
https://bugs.webkit.org/show_bug.cgi?id=210148
Summary
We can still cache delete in strict mode as long as the property is not "non-...
Saam Barati
Reported
2020-04-07 13:32:20 PDT
Only deletes on non-configurable in strict mode throw
Attachments
patch
(3.97 KB, patch)
2020-04-08 10:54 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(3.97 KB, patch)
2020-04-08 10:56 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-04-08 10:54:37 PDT
Created
attachment 395836
[details]
patch
Saam Barati
Comment 2
2020-04-08 10:55:34 PDT
Comment on
attachment 395836
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=395836&action=review
> JSTests/microbenchmarks/delete-cache-strict-mode.js:27 > +noInline(doDel);
oops: this should be doDelByVal, will fix
Saam Barati
Comment 3
2020-04-08 10:56:28 PDT
Created
attachment 395837
[details]
patch
Tadeu Zagallo
Comment 4
2020-04-08 11:16:36 PDT
Comment on
attachment 395837
[details]
patch r=me
EWS
Comment 5
2020-04-09 10:59:12 PDT
Committed
r259807
: <
https://trac.webkit.org/changeset/259807
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395837
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-04-09 11:00:16 PDT
<
rdar://problem/61527037
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug