We can still cache delete in strict mode as long as the property is not "non-configurable" https://bugs.webkit.org/show_bug.cgi?id=210148

Reviewed by Tadeu Zagallo.

JSTests:

* microbenchmarks/delete-cache-strict-mode.js: Added.
(assert):
(doDel):
(doDelByVal):

Source/JavaScriptCore:

We were incorrectly not inline caching all delete misses in strict mode.
We only must to not cache deletes on non-configurable properties in strict
mode, as that should throw a runtime error. Delete misses can still be cached
in strict mode without any issues. This is a 4x speedup on the microbenchmark.

* jit/Repatch.cpp:
(JSC::tryCacheDeleteBy):


Canonical link: https://commits.webkit.org/223167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259807 268f45cc-cd09-0410-ab3c-d52691b4dbfc